Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@ Building on these findings, more recent experimental work has directly addressed
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.9\textwidth]{Configurations.jpg}
+    \includegraphics[width=1.3\textwidth]{Configurations.png}
     \caption{Regular configurations.}
     \label{fig:configurations}
 \end{figure}
