Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -136,6 +136,14 @@ Video evidence combined with filtered force records revealed that debris impacts
 
 \section{In Air Tests} 
 
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=\linewidth]{figures/plot_normalized_forces_in_air_vs_in_water_zoom.png}
+    \caption{Normalized force responses for the Pendulum test and 1L configurations. Each subplot is normalized by its respective maximum force.}
+    \label{fig:normalized_forces}
+\end{figure}
+
+
 \begin{table}[ht]
 \centering
 \begin{tabular}{l c c c c c c}
