Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@ Video evidence combined with filtered force records revealed that debris impacts
 
 \section{In Air Tests} 
 
-A total of 5 single-piece configurations (10 tests each) have been conducted in order to evaluate the effect of size on 
+The test structure has been characterized by performing a total of 32 in-air tests. The tests have been performed by 
 
 \begin{figure}[ht]
     \centering
@@ -174,14 +174,14 @@ in-air & Mode 3 & 19.94 & 0.084 & 0.91 & 0.0091 & 0.0020 \\
 1L longitudinal test & Mode 3 & 19.58 & 0.160 & 1.66 & 0.0166 & 0.0023 \\
 \hline
 \end{tabular}
-\caption{Median natural frequencies and damping ratios (\% and absolute) for each test condition.}
+\caption{Median natural frequencies and damping ratios (\% and absolute) for each condition.}
 \label{tab:mode_summary}
 \end{table}
 
 
 
-\section{Single Debris Tests} 
-The 
+\section{Single Debris Trials} 
+A total of 5 single-piece configurations (10 trials each) have been conducted in order to evaluate the effect of size on 
 
 \section{Results: Regular Configurations}
 
